修改gaussdb插件并测试

--- a/datax-example/pom.xml
+++ b/datax-example/pom.xml
@@ -15,6 +15,8 @@
         <module>datax-example-core</module>
         <module>datax-example-streamreader</module>
         <module>datax-example-neo4j</module>
+        <module>datax-example-gbase8a</module>
+        <module>datax-example-gaussdb</module>
     </modules>
 
     <properties>
