修改gaussdb插件并测试

--- a/datax-example/datax-example-gaussdb/pom.xml
+++ b/datax-example/datax-example-gaussdb/pom.xml
@@ -42,6 +42,16 @@
             <artifactId>mysqlwriter</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba.datax</groupId>
+            <artifactId>oraclereader</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba.datax</groupId>
+            <artifactId>oraclewriter</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
