修改txtfile插件并测试

--- a/datax-example/pom.xml
+++ b/datax-example/pom.xml
@@ -17,6 +17,7 @@
         <module>datax-example-neo4j</module>
         <module>datax-example-gbase8a</module>
         <module>datax-example-gaussdb</module>
+        <module>datax-example-txtfile</module>
     </modules>
 
     <properties>
