--- a/rdbmsreader/pom.xml
+++ b/rdbmsreader/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<parent>
 		<artifactId>datax-all</artifactId>
 		<groupId>com.alibaba.datax</groupId>
@@ -33,20 +33,20 @@
 		</dependency>
 		<!-- sybase driver -->
 		<dependency>
-            <groupId>com.sybase</groupId>
-            <artifactId>jconn3</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
-            <scope>system</scope>
-            <systemPath>${basedir}/src/main/libs/jconn3-1.0.0-SNAPSHOT.jar</systemPath>
-        </dependency>
+			<groupId>com.sybase</groupId>
+			<artifactId>jconn3</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
+			<scope>system</scope>
+			<systemPath>${basedir}/src/main/libs/jconn3-1.0.0-SNAPSHOT.jar</systemPath>
+		</dependency>
 		<!-- ppas driver -->
 		<dependency>
-            <groupId>ppas</groupId>
-            <artifactId>ppas</artifactId>
-            <version>16</version>
-            <scope>system</scope>
-            <systemPath>${basedir}/src/main/libs/edb-jdbc16.jar</systemPath>
-        </dependency>
+			<groupId>ppas</groupId>
+			<artifactId>ppas</artifactId>
+			<version>16</version>
+			<scope>system</scope>
+			<systemPath>${basedir}/src/main/libs/edb-jdbc16.jar</systemPath>
+		</dependency>
 		<!-- db2 driver -->
 		<dependency>
 			<groupId>com.ibm.db2.jcc</groupId>
@@ -86,13 +86,13 @@
 			<!-- assembly plugin -->
 			<plugin>
 				<artifactId>maven-assembly-plugin</artifactId>
-                <version>2.2.2</version>
+				<version>2.2.2</version>
 				<configuration>
 					<descriptors>
 						<descriptor>src/main/assembly/package.xml</descriptor>
 					</descriptors>
 					<finalName>datax</finalName>
-                    <appendAssemblyId>false</appendAssemblyId>
+					<appendAssemblyId>false</appendAssemblyId>
 				</configuration>
 				<executions>
 					<execution>
