--- a/adswriter/src/main/assembly/package.xml
+++ b/adswriter/src/main/assembly/package.xml
@@ -1,10 +1,8 @@
-<assembly
-	xmlns="http://maven.apache.org/plugins/maven-assembly-plugin/assembly/1.1.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/plugins/maven-assembly-plugin/assembly/1.1.0 http://maven.apache.org/xsd/assembly-1.1.0.xsd">
-	
+<assembly xmlns="http://maven.apache.org/plugins/maven-assembly-plugin/assembly/1.1.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/plugins/maven-assembly-plugin/assembly/1.1.0 http://maven.apache.org/xsd/assembly-1.1.0.xsd">
+
 	<id>datax</id>
-    <formats>
+	<formats>
 		<format>dir</format>
 	</formats>
 	<includeBaseDirectory>false</includeBaseDirectory>
@@ -13,7 +11,7 @@
 			<directory>src/main/resources</directory>
 			<includes>
 				<include>plugin.json</include>
-                <include>config.properties</include>
+				<include>config.properties</include>
 				<include>plugin_job_template.json</include>
 			</includes>
 			<outputDirectory>plugin/writer/adswriter</outputDirectory>
